fix
images not showing up on the link, more space at the bottom for the popup

--- a/style.css
+++ b/style.css
@@ -129,6 +129,6 @@ footer {
     border-top: 1px solid black;
     width :fit-content;
     padding-top: 1rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 5rem;
     margin-top: 3.3rem;
 }
